libs/preprocessor/tests/errors/pe14_include_unexpected_suffix/stderr.ansi
[0m[1m[38;5;9merror[PE14][0m[1m: unexpected tokens after include[0m
  [0m[36m┌─[0m source.hpp:1:25
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m #include <something.hpp>[0m[31m;[0m
  [0m[36m│[0m                         [0m[31m^[0m [0m[31munexpected tokens after include[0m
  [0m[36m│[0m
  [0m[36m=[0m [33mhelp[0m: expected a newline after include

